; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_cgroup.c_cgroup_context_blkio_weight.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_cgroup.c_cgroup_context_blkio_weight.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64 }

@MANAGER_STARTING = common dso_local global i32 0, align 4
@MANAGER_INITIALIZING = common dso_local global i32 0, align 4
@CGROUP_BLKIO_WEIGHT_INVALID = common dso_local global i64 0, align 8
@CGROUP_BLKIO_WEIGHT_DEFAULT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_3__*, i32)* @cgroup_context_blkio_weight to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @cgroup_context_blkio_weight(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @MANAGER_STARTING, align 4
  %8 = load i32, i32* @MANAGER_INITIALIZING, align 4
  %9 = call i64 @IN_SET(i32 %6, i32 %7, i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %21

11:                                               ; preds = %2
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @CGROUP_BLKIO_WEIGHT_INVALID, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %11
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  store i64 %20, i64* %3, align 8
  br label %33

21:                                               ; preds = %11, %2
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @CGROUP_BLKIO_WEIGHT_INVALID, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %31

27:                                               ; preds = %21
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  store i64 %30, i64* %3, align 8
  br label %33

31:                                               ; preds = %21
  %32 = load i64, i64* @CGROUP_BLKIO_WEIGHT_DEFAULT, align 8
  store i64 %32, i64* %3, align 8
  br label %33

33:                                               ; preds = %31, %27, %17
  %34 = load i64, i64* %3, align 8
  ret i64 %34
}

declare dso_local i64 @IN_SET(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
